--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="copyright" content="http://www.sofarsogood.fr">
 		
                 <!--  + + + + + + + + + + + + + + + + + + +   POWERED by INCREDIBOX   + + + + + + + + + + + + + + + + + + + + + +
-                + + + + + + + + + + + + + + + + + + + + +  Incredibox © So Far So Good  + + + + + + + + + + + + + + + + + + + + +
+                + + + + + + + + + + + + + + + + + + + + +  Incredibox ï¿½ So Far So Good  + + + + + + + + + + + + + + + + + + + + +
                 + + + + + + + + + + + + + + + + + + + + +   http://www.sofarsogood.fr   + + + + + + + + + + + + + + + + + + + + +
 
 
@@ -86,17 +86,17 @@
 		<meta property="og:image" content="https://www.incredibox.com/img/share/fb-incredibox-v2.jpg">
 
 		<link href="https://www.incredibox.com/img/favicon.ico" type="image/ico" rel="icon">
-		<link href="../css/index.css" rel="stylesheet">
+		<link href="css/index.css" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Allan' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet' type='text/css'>
 
-		<script type="text/javascript" src="../js/jquery-1.11.1.min.js"></script>
-		<!--[if lt IE 10]><script type="text/javascript" src="../js/jquery.placeholder.js"></script><![endif]-->
-    	<script type="text/javascript" src="../js/TweenMax.min.js"></script>
-		<script type="text/javascript" src="../js/easing/EasePack.min.js"></script>
-		<script type="text/javascript" src="../js/swfobject.js"></script>
-		<script type="text/javascript" src="../js/index.js"></script>
-		<script type="text/javascript" src="../js/blockad.js"></script>
+		<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+		<!--[if lt IE 10]><script type="text/javascript" src="js/jquery.placeholder.js"></script><![endif]-->
+    	<script type="text/javascript" src="js/TweenMax.min.js"></script>
+		<script type="text/javascript" src="js/easing/EasePack.min.js"></script>
+		<script type="text/javascript" src="js/swfobject.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="js/blockad.js"></script>
 		<script type="text/javascript">
 			
 			var flashversion = "9.0.0";
@@ -108,7 +108,7 @@
 					var flashvars = {};
 					flashvars.compo = "";
 					flashvars.domain = domain;
-					flashvars.rootFolder = "../app/";
+					flashvars.rootFolder = "app/";
 					flashvars.appFolder = "v2/";
 					var params = {};
 					params.bgcolor = "#FFFFFF";
@@ -120,7 +120,7 @@
 					params.allowfullscreen = "false";
 					params.allowscriptaccess = "always";
 					var attributes = {};
-					swfobject.embedSWF("../app/index.swf", "flashContent", "100%", "100%", flashversion, "", flashvars, params, attributes, embedFlashOk)
+					swfobject.embedSWF("app/index.swf", "flashContent", "100%", "100%", flashversion, "", flashvars, params, attributes, embedFlashOk)
 				}else{
 					$(".info").show();
 				}
