--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/fb-incredibox.jpg">
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/css.css" rel="stylesheet" type="text/css">
+	<link href="css/css_1.css" rel="stylesheet" type="text/css">
     <link href="favicon.ico" type="image/ico" rel="icon">
 </head>
 <body>
-    <noscript>
-        <div id="info-js">
-            <p>You have to enable JavaScript in your browser settings to access this website.</p>
-        </div>
-    </noscript>
     <div id="wrap" class="home">
         <div class="head">
             <div class="middle">
@@ -32,9 +29,7 @@
         <div class="accroche middle white">
             <span>Select a version to start mixing music</span>
             <div class="lineP">
-                <span class="trait"></span>
-                <span class="pointe"></span>
-                <span class="trait"></span>
+                <span class="trait"></span><span class="pointe"></span><span class="trait"></span>
             </div>
         </div>
         <div id="select" class="middle">
