fix v4 again + added the original

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="accroche middle white">
-            <span>Select a version to start mixing music</span>
+            <span>Select a version to start mixing music<br>Or play <a href="./v0/index.html">The Original</a> instead</span>
             <div class="lineP">
                 <span class="trait"></span><span class="pointe"></span><span class="trait"></span>
             </div>
