fix index and v0

--- a/v0/index.html
+++ b/v0/index.html
@@ -40,11 +40,7 @@
     </div>
     
     <script type="text/javascript">
-    	var so = new SWFObject('index.swf', 'incredibox', '100%', '100%', '9', '#ffffff');
-    	so.addParam('menu', 'false');
-    	so.addParam('scale', 'noscale');
-    	so.addParam('salign', 'lt'); 
-    	so.write('flashcontent');
+		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "incredibox", "100%", "100%", "9", "#ffffff");
     </script>
 
 
