fix v0 and index again

--- a/v0/index.html
+++ b/v0/index.html
@@ -9,7 +9,10 @@
 	<meta name="robots" content="index">
 	<meta name="author" content="allan DURAND, paul MALBURET, romain DELAMBILY">
 	<link href="favicon.ico" type="image/ico" rel="icon">
-	<script type="text/javascript" src="../js/swfobject.js"></script>
+	<script type="text/javascript" src="swfobject.js"></script>
+	<script type="text/javascript">
+		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "incredibox", "100%", "100%", "9", "#ffffff");
+    </script>
 	<style type="text/css">
 	* {
 		background-color:#ffffff;
@@ -35,13 +38,9 @@
 </head>
 
 
-		<div id="flashcontent">
+	<div id="flashcontent">
 		<a href="http://get.adobe.com/en/flashplayer/" target="_blank"><img class="image" src="need_flash9.png" width="600" height="400" alt="download flash player" border="no"></a>
     </div>
-    
-    <script type="text/javascript">
-		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "incredibox", "100%", "100%", "9", "#ffffff");
-    </script>
 
 
 
