fix v0 and index again for some reason

--- a/v0/index.html
+++ b/v0/index.html
@@ -9,9 +9,9 @@
 	<meta name="robots" content="index">
 	<meta name="author" content="allan DURAND, paul MALBURET, romain DELAMBILY">
 	<link href="favicon.ico" type="image/ico" rel="icon">
-	<script type="text/javascript" src="swfobject.js"></script>
+	<script type="text/javascript" src="../js/swfobject.js"></script>
 	<script type="text/javascript">
-		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "incredibox", "100%", "100%", "9", "#ffffff");
+		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "flashcontent", "100%", "100%", "9", "#ffffff");
     </script>
 	<style type="text/css">
 	* {
