--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             </div>
         </div>
         <div class="accroche middle white">
-            <span>Select a version to start mixing music<br>Or play <a href="./v0/index.html">The Original</a> instead</span>
-            <br>
-            <br>
+            <span>Select a version to start mixing music, or play <u href="./v0/index.html">The Original</u> instead</span>
             <div class="lineP">
                 <span class="trait"></span><span class="pointe"></span><span class="trait"></span>
             </div>
