--- a/v0/index.html
+++ b/v0/index.html
@@ -12,7 +12,7 @@
 	<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 	<script type="text/javascript" src="../js/swfobject.js"></script>
 	<script type="text/javascript">
-		swfobject.embedSWF("v0/index.swf", "flashcontent", "100%", "100%", "9", "#ffffff");
+		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "flashcontent", "100%", "100%", "9", "#ffffff");
     </script>
 	<style type="text/css">
 	* {
