--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/index.css" rel="stylesheet">
     <link href="css/css.css" rel="stylesheet" type="text/css">
 	<link href="css/css_1.css" rel="stylesheet" type="text/css">
-    <link href="favicon.ico" type="image/ico" rel="icon">
+    <link href="https://www.incredibox.com/img/favicon.ico" type="image/ico" rel="icon">
 </head>
 <body>
     <div id="wrap" class="home">
