--- a/v1/index.html
+++ b/v1/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Incredibox - V1 "Alpha" (remastered)</title>
-		<meta name="description" content="&quot;Alpha&quot; is a remaster of the version the original created in 2009.">
-		<meta name="keywords" content="music, beatbox, bonus, rythme, music app, learning rythme, make sounds, educational music game, create music, music tool, music sequencer online, flash music app, free flash game">
+		<meta name="description" content="&quot;Alpha&quot; is a remaster of the version &quot;The original&quot; created in 2009.">
+		<meta name="keywords" content="music, version 1, beatbox, bonus, rythme, music app, learning rythme, make sounds, educational music game, create music, music tool, music sequencer online, flash music app, free flash game">
 		<meta name="author" content="So Far So Good">
 		<meta name="copyright" content="http://www.sofarsogood.fr">
 		
@@ -80,8 +80,8 @@
                 + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + -->
 
 
-				<meta property="og:title" content="INCREDIBOX V1 - &quot;Alpha (remastered)&quot;">
-				<meta property="og:description" content="Express your musicality on Incredibox with the remastered version 1 called &quot;Alpha&quot;. Create your mix, record it, share it a lot to make it to the TOP 50! Pump it up and chill ;)">
+				<meta property="og:title" content="INCREDIBOX V1 - &quot;Alpha&quot; (remastered)">
+				<meta property="og:description" content="Express your musicality on Incredibox with the remastered version 1 called &quot;Alpha&quot;. Create your mix, record it, share it then join the TOP 50 chart! Pump it up and chill ;)">
 				<meta property="og:type" content="website">
 				<meta property="og:image" content="http://www.incredibox.com/img/share/fb-incredibox-v1.jpg">
 
