--- a/v0/index.html
+++ b/v0/index.html
@@ -37,8 +37,12 @@
 	</style>
 </head>
 
+<div id="hd-left">
+	<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
+	<div class="clear"></div>
+</div>
 
-	<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+
 	<div id="flashcontent">
 		<a href="http://get.adobe.com/en/flashplayer/" target="_blank"><img class="image" src="need_flash9.png" width="600" height="400" alt="download flash player" border="no"></a>
     </div>
