--- a/v4/index.html
+++ b/v4/index.html
@@ -133,6 +133,12 @@
 	</head>
 	<body>
 		<noscript><div id="info-js"><p>You have to enable JavaScript in your browser settings to access this website</p></div></noscript>
+
+		<!-- _____________________________ MENU -->
+		<div id="hd-left">
+			<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
+			<div class="clear"></div>
+		</div>
 				
 		<!-- _____________________________________________________ -->
 		<!-- _____________________________________________ CONTENT -->
