--- a/v0/index.html
+++ b/v0/index.html
@@ -9,6 +9,7 @@
 	<meta name="robots" content="index">
 	<meta name="author" content="allan DURAND, paul MALBURET, romain DELAMBILY">
 	<link href="favicon.ico" type="image/ico" rel="icon">
+	<link href="../css/index.css" rel="stylesheet">
 	<script type="text/javascript" src="../js/swfobject.js"></script>
 	<script type="text/javascript">
 		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "flashcontent", "100%", "100%", "9", "#ffffff");
@@ -37,9 +38,19 @@
 	</style>
 </head>
 
-<div id="hd-left">
-	<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
-	<div class="clear"></div>
+<div id="bbox">
+	<div id="bbox-fd"></div>
+	<div id="bbox-body">
+		<div id="bbox-click"></div>
+	</div>
+</div>		<!-- ____________________________________________________ -->
+		<!-- _____________________________________________ HEADER -->			
+<div id="menu">
+	<!-- _____________________________ MENU -->
+	<div id="hd-left">
+		<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
+		<div class="clear"></div>
+	</div>
 </div>
 
 
