--- a/v3/index.html
+++ b/v3/index.html
@@ -134,10 +134,19 @@
 	<body>
 		<noscript><div id="info-js"><p>You have to enable JavaScript in your browser settings to access this website</p></div></noscript>
 
-		<!-- _____________________________ MENU -->
-		<div id="hd-left">
-			<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
-			<div class="clear"></div>
+		<div id="bbox">
+			<div id="bbox-fd"></div>
+			<div id="bbox-body">
+				<div id="bbox-click"></div>
+			</div>
+		</div>		<!-- ____________________________________________________ -->
+				<!-- _____________________________________________ HEADER -->			
+		<div id="menu">
+			<!-- _____________________________ MENU -->
+			<div id="hd-left">
+				<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
+				<div class="clear"></div>
+			</div>
 		</div>
 
 		<!-- _____________________________________________________ -->
