--- a/v0/index.html
+++ b/v0/index.html
@@ -98,7 +98,7 @@
 			width:600px;
 			height:400px;
 			left: 50%;
-			top: 50%;
+			top: 60%;
 			position:absolute;
 			margin-left:-300px;
 			margin-top:-200px;
@@ -124,7 +124,7 @@
          		params.allowfullscreen = "false";
          		params.allowscriptaccess = "always";
          		var attributes = {};
-         		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "flashContent", "100%", "100%", flashversion, "", flashvars, params, attributes, embedFlashOk)
+         		swfobject.embedSWF("https://raw.githubusercontent.com/Joalor64GH/Incredibox-Flash/main/v0/index.swf", "flashcontent", "100%", "100%", flashversion, "", flashvars, params, attributes, embedFlashOk)
          	}else{
          		$(".info").show();
          	}
