--- a/v3/index.html
+++ b/v3/index.html
@@ -144,7 +144,7 @@
 		<div id="menu">
 			<!-- _____________________________ MENU -->
 			<div id="hd-left">
-				<a href="./index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
+				<a href="../index.html" id="bt1" class="lien"><div class="title">Incredibox</div><div class="picto"></div></a>
 				<div class="clear"></div>
 			</div>
 		</div>
