--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             </div>
         </div>
         <div id="select" class="middle">
-            <!--<a href="./v1/index.html" class="game" id="appv1">
+            <a href="./v1/index.html" class="game" id="appv1">
                 <div class="rond"><div class="icon"></div></div>
                 <div class="p1"><span>V1</span></div>
                 <div class="info">
                     <div class="title">Alpha</div>
                     <div class="year">2099</div>
                 </div>
-                <div class="play">Create<br>your mix</div>
-            </a>-->
+                <div class="play">Coming<br>soon...</div>
+            </a>
             <a href="./v2/index.html" class="game" id="appv2">
                 <div class="rond"><div class="icon"></div></div>
                 <div class="p1"><span>V2</span></div>
