--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="title">Alpha</div>
                     <div class="year">2099</div>
                 </div>
-                <div class="play">Coming<br>soon...</div>
+                <div class="play">Work in<br>progress</div>
             </a>
             <a href="./v2/index.html" class="game" id="appv2">
                 <div class="rond"><div class="icon"></div></div>
