just because, ruffle

--- a/v0/index.html
+++ b/v0/index.html
@@ -137,6 +137,7 @@
    </head>
    <body>
       <noscript>
+         <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
          <div id="info-js"> <p>You have to enable JavaScript in your browser settings to access this website</p></div>
       </noscript>
       <div id="bbox">
