--- a/v2/index.html
+++ b/v2/index.html
@@ -132,6 +132,7 @@
 		</script>
 	</head>
 	<body>
+		<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 		<noscript><div id="info-js"><p>You have to enable JavaScript in your browser settings to access this website</p></div></noscript>
 
 		<div id="bbox">
